Bug 14702 - tdb_fetch_uint32() returns false on success - breaks winbindd offline logon.
Summary: tdb_fetch_uint32() returns false on success - breaks winbindd offline logon.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: 4.14.4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Samba QA Contact
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-11 09:50 UTC by Andreas Schneider
Modified: 2021-05-13 06:27 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2021-05-11 09:50:18 UTC
The tdb_fetch_uint32() function returns false on success.
Comment 1 Samba QA Contact 2021-05-12 21:20:05 UTC
This bug was referenced in samba master:

2b9a1feae7364a294b024dbeaf6a0202bbad468a
Comment 2 Andreas Schneider 2021-05-13 06:27:07 UTC
This was only an issue in master.